# modularity

./: .gitignore  Cargo.toml  README.md
examples/: build.ps1  resolve.rs
examples/a/: component.wasm
examples/a/wit/: component.wit
examples/b/: component.wasm
examples/b/src/: lib.rs
examples/b/wit/: component.wit
examples/c/: component.wasm
examples/c/src/: lib.rs
examples/c/wit/: component.wit
examples/d/: component.wasm
examples/d/src/: lib.rs
examples/d/wit/: component.wit
src/: lib.rs
