[package]
name = "modularity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
fxhash = "0.2.1"
semver = "1.0.18"
topological-sort = "0.2.2"
wasm_component_layer = "0.1.1"
wasm_runtime_layer = "0.1.3"

[dev-dependencies]
wasmi = "0.31.0"
wasm_runtime_layer = { version = "0.1.3", features = [ "backend_wasmi" ] }