[package]
name = "modularity"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/modularity"
readme = "README.md"
description = """
WASM component loader, linker, and manager.
"""

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
fxhash = "0.2.1"
semver = "1.0.18"
topo_sort = "0.4.0"
wasm_component_layer = "0.1.1"
wasm_runtime_layer = "0.1.3"

[dev-dependencies]
wasmi = "0.31.0"
wasm_runtime_layer = { version = "0.1.3", features = [ "backend_wasmi" ] }