[package]
name = "modularity"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/modularity"
readme = "README.md"
description = """
WASM component loader, linker, and manager.
"""

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = [ "alloc" ] }
fxhash = { version = "0.2.1", default-features = false }
ref-cast = { version = "1.0.20", default-features = false }
semver = { version = "1.0.18", default-features = false }
topo_sort = { version = "0.4.0", default-features = false }
wasm_component_layer = { version = "0.1.9", default-features = false }
wasm_runtime_layer = { version = "0.1.4", default-features = false }

[dev-dependencies]
wasmi = "0.31.0"
wasm_runtime_layer = { version = "0.1.3", features = [ "backend_wasmi" ] }